--- a/src/css/_mixins.scss
+++ b/src/css/_mixins.scss
@@ -1,3 +1,4 @@
+// from small to large
 
 @mixin mq($size){
     @if $size == media-xxl {
@@ -16,6 +17,8 @@
         @media (min-width: 36em) { @content; } // 576px
     }   
 }
+
+// from large to small
 
 @mixin mq-rv($size){
     @if $size == media-xxl {
