--- a/src/css/components/_footer.scss
+++ b/src/css/components/_footer.scss
@@ -5,9 +5,21 @@
     color: $color--white;
     padding: 6rem 2.4rem;
 
+    @include mq(media-xxl) {
+        display: flex;
+        padding: $padding--main-xxl;
+    }
     @include mq(media-xl) {
         display: flex;
-        padding: 12.5rem 10rem;
+        padding: $padding--main-xl;
+    }
+    @include mq(media-md) {
+        display: flex;
+        padding: $padding--main-md;
+    }
+    @include mq(media-sm) {
+        display: flex;
+        padding: $padding--main-sm
     }
 
     img {
