--- a/src/css/components/_section--inhalt.scss
+++ b/src/css/components/_section--inhalt.scss
@@ -6,6 +6,7 @@
     .section--head {
         margin-bottom: 8.8rem;
     }
+
     .display--product-img {
         width: 60%;
     }
@@ -47,15 +48,27 @@
         display: flex;
         justify-content: space-between;
         width: 100%;
+        margin: auto;
 
         @include mq(media-xl) {
-        flex-direction: column;
-        justify-content: space-between;
-        height: 100%;
-        width: auto;
-        margin-bottom: 10rem;
+            flex-direction: column;
+            justify-content: space-between;
+            height: 100%;
+            width: auto;
+            margin-bottom: 10rem;
+        }
+
+        @include mq(media-md) {
+            width: 65%;
+            margin: 0 auto 3rem;
+        }
+
+        @include mq(media-sm) {
+            width: 70%;
+            margin: 0 auto 3rem;
         }
     }
+
     .display--info-container {
         display: block;
         justify-content: space-between;
@@ -100,7 +113,11 @@
     .icon-inhalt {
         height: 4.5rem;
         width: auto;
-        margin: 0 2.4rem 2.4rem 2.4rem;  
+        margin: 0 2.4rem 2.4rem 2.4rem;
+
+        @include mq(media-md) {
+            height: 6rem;
+        }
     }
 
 }
