--- a/src/css/components/_section--ort.scss
+++ b/src/css/components/_section--ort.scss
@@ -3,13 +3,27 @@
     margin: 0;
     width: 100%;
 
+
     .section--head {
         margin: 0;
         padding:  0rem 2.4rem;
 
+        @include mq(media-xxl) {
+            padding: 0 2.4rem;
+        }
         @include mq(media-xl) {
+            padding: 0 4rem;
+        }
+        @include mq(media-lg) {
             padding: 0 10rem;
         }
+        @include mq(media-md) {
+            
+        }
+        @include mq(media-sm) {
+            
+        }
+        
     }
 
     .background--container {
