--- a/src/css/components/_nav-m.scss
+++ b/src/css/components/_nav-m.scss
@@ -1,24 +1,41 @@
 #nav-m {
-    background-color: purple; // for testing
-
     display: none;
+
+    width: 100%;
+    height: 100%;
+}
+
+.nav--menu {
+
+    background-color: black;
+    z-index: 900;
+    width: 100%;
+    height: 100%;
+
+    ul {
+        list-style: none;
+    }
+}
+
+.navbar {
     padding: 1rem 2.4rem;
 
     @include mq(media-md) {
         padding: $padding--nav_m-md;
     }
+
     @include mq(media-sm) {
         padding: $padding--nav_m-sm;
     }
 
-
     @include mq-rv(media-md) {
-        display: flex;
+        display: flex; // switch on mobile nav
     }
 }
 
 .nav--burger {
     padding: .8rem 0;
+
     img {
         height: 100%;
     }
