--- a/src/css/components/_section--gallery.scss
+++ b/src/css/components/_section--gallery.scss
@@ -11,49 +11,54 @@
     flex-wrap: wrap;
     height: 105vh;
 
-
+    @include mq(media-xxl) {
+      
+    }
     @include mq(media-xl) {
 
-        height: 50vh;
+        height: 80vh;
 
         .img1 {
             order: 1;
             margin: 0 2rem 2rem 0;
         }
-
         .img2 {
             order: 5;
             margin: 0 2rem 2rem 0;
         }
-
         .img3 {
             order: 6;
             margin: 0 2rem 2rem 0;
         }
-
         .img4 {
             order: 2;
             margin: 0 2rem 2rem 0;
         }
-
         .img5 {
             order: 3;
             margin: 0 2rem 2rem 0;
         }
-
         .img6 {
             order: 8;
         }
-
         .img7 {
             order: 7;
         }
-
         .img8 {
             order: 4;
             margin: 0 2rem 2rem 0;
         }
     }
+    @include mq(media-lg) {
+        height: 150vh;
+    }
+    @include mq(media-md) {
+        
+    }
+    @include mq(media-sm) {
+        
+    }
+
 }
 
 %gallery--img-ph {
