prepare mobile menu for JS

--- a/src/templates/_nav-m.html
+++ b/src/templates/_nav-m.html
@@ -1,12 +1,28 @@
-<div id="nav-m" class="navbar">
-    <div class="nav--logo">
-        <a href="index.html">
-            <img src="../src/assets/main/icons/icon__logo_wh.svg" alt="Rustica Logo">
-        </a>
+<div class="nav--menu">
+    <nav>
+        <ul class="nav--links-m">
+            <h3>
+                <li class="h3"><a href="./cafe.html"">das Café</a></li>
+        <li class=" h3"><a href="./herkunft.html">Herkunft</a></li>
+                <li class="h3"><a href="#">Shop</a></li>
+            </h3>
+        </ul>
+    </nav>
+    <div class="nav--menu-close">
+        <img src="../src/assets/main/icons/icon__burger-menu-close.svg" alt="A white X">
     </div>
-    <div class="nav--burger">
-        <a href="index.html">
-            <img src="../src/assets/main/icons/icon__burger-menu-wht.svg" alt="Rustica Logo">
-        </a>
+</div>
+<div id="nav-m">
+    <div class="navbar-m">
+        <div class="nav--logo">
+            <a href="index.html">
+                <img src="../src/assets/main/icons/icon__logo_wh.svg" alt="Rustica Logo">
+            </a>
+        </div>
+        <div class="nav--burger">
+            <a href="index.html">
+                <img src="../src/assets/main/icons/icon__burger-menu-wht.svg" alt="Rustica Logo">
+            </a>
+        </div>
     </div>
 </div>
