--- a/src/templates/_nav.html
+++ b/src/templates/_nav.html
@@ -2,9 +2,10 @@
     <div class="nav--logo">
         <a href="index.html"><img src="../src/assets/main/icons/icon__logo_wh.svg" alt="Rustica Logo"></a>
     </div>
-    <ul class="nav--links">
-        <li><a href="./cafe.html"">das Café</a></li>
-        <li><a href="./herkunft.html">Herkunft</a></li>
-        <li><a href="#">Shop</a></li>
-    </ul>
+    <nav>
+        <ul class="nav--links">
+            <li><a href="./cafe.html"">das Café</a></li>
+        <li><a href=" ./herkunft.html">Herkunft </a> </li> <li><a href="#">Shop</a></li>
+        </ul>
+    </nav>
 </div>
