build _kontakt.html for mobile

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -13,4 +13,6 @@
 @import "components/section--gallery";
 @import "components/footer.scss";
 @import "components/btn--dunkel";
+@import "components/form";
+
 
