--- a/src/templates/_nav.html
+++ b/src/templates/_nav.html
@@ -4,8 +4,10 @@
     </div>
     <nav>
         <ul class="nav--links">
-            <li><a href="./cafe.html"">das Café</a></li>
-        <li><a href=" ./herkunft.html">Herkunft </a> </li> <li><a href="#">Shop</a></li>
+            <li><a href="./cafe.html">das Café</a></li>
+            <li><a href=" ./herkunft.html">Herkunft </a> </li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="./kontakt.html">Kontakt</a></li>
         </ul>
     </nav>
 </div>
