--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -41,7 +41,6 @@ $margin--btn-bottom: 6rem;
     .spacer {
       visibility: hidden;
     }
-
   }
 
   .btn--container {
@@ -63,5 +62,20 @@ $margin--btn-bottom: 6rem;
 #herkunft--header-container {
   background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../assets/main/images/FEND-Coffee-beans-hand-2.jpg);
   height: 40vh;
+  @extend %header-container-ph;
+}
+
+#kontakt--header-container {
+  text-align: left;
+  padding-bottom: 0;
+
+  h2 {
+    line-height: 3.4rem;
+  }
+
+  .header--title {
+    margin-top: 7rem;
+  }
+
   @extend %header-container-ph;
 }
