--- a/src/css/components/_main--section.scss
+++ b/src/css/components/_main--section.scss
@@ -18,6 +18,10 @@
     }
 }
 
+#kontakt--main {
+    padding-top: 2rem;
+}
+
 // CLASSES
 
 video {
@@ -109,6 +113,10 @@ video {
         flex-direction: row-reverse;
     }
 
+    &-row {
+        flex-direction: row;
+    }
+
     &:nth-of-type(odd) {
         flex-direction: column;
         align-items: flex-end;
@@ -143,9 +151,13 @@ video {
         }
     }
 
+    // margin under info--section
+    &:not(:last-of-type) {
+        margin-bottom: 4.5rem;
+    }
+
     // every 2nd child of .section--info
     &:nth-child(2n) {
-
         .section--text {
             @include mq(media-xl) {
                 padding-left: 12rem;
@@ -182,7 +194,6 @@ video {
 }
 
 .section--container {
-
     @include mq(media-xl) {
         width: 50%;
     }
@@ -191,15 +202,7 @@ video {
     }
 
     img {
-        @include mq(media-xl) {
-            width: 100%;
-        }
-        @include mq(media-lg) {
-            width: 100%;
-        }
-        @include mq(media-md) {
-            width: 100%;
-        }
+        width: 100%;
     }
 }
 
