several small changes

--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -18,7 +18,7 @@ $padding--nav_m-lg: 1rem $padding--side-lg;
 $padding--nav_m-xl: 1rem $padding--side-xl;
 $padding--nav_m-xxl: 1rem $padding--side-xxl;
 
-//main
+// main
 $padding--main-m: 6rem $padding--side-m;
 $padding--main-sm: 8rem $padding--side-sm;
 $padding--main-md: 10rem $padding--side-md;
@@ -37,6 +37,7 @@ $color--petrol: rgba(0,109,126,1);
 $color--rosa: rgba(237,209,201,1);
 $color--orange: rgba(215,124,18,1);
 $color--medium-grey: rgba(115,115,115,1);
+$color--medium-grey-1: rgba(196,196,196,1);
 $color--light-grey: rgba(233,233,233,1);
 
 $color--btn-dunkel: rgb(26, 26, 26);
