--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -13,6 +13,7 @@
 @import "components/section--gallery";
 @import "components/footer.scss";
 @import "components/btn--dunkel";
+@import "components/section--kontakt";
 @import "components/form";
 
 
