update to current state

--- a/src/templates/_nav.html
+++ b/src/templates/_nav.html
@@ -1,13 +1,18 @@
 <div id="nav-d" class="navbar">
-    <div class="nav--logo">
-        <a href="index.html"><img src="../src/assets/main/icons/icon__logo_wh.svg" alt="Rustica Logo"></a>
-    </div>
-    <nav>
-        <ul class="nav--links">
-            <li><a href="./cafe.html">das Café</a></li>
-            <li><a href=" ./herkunft.html">Herkunft </a> </li>
-            <li><a href="#">Shop</a></li>
-            <li><a href="./kontakt.html">Kontakt</a></li>
-        </ul>
-    </nav>
+  <div class="nav--logo">
+    <a href="index.html"
+      ><img src="../src/assets/main/icons/icon__logo_wh.svg" alt=""
+    /></a>
+  </div>
+  <div class="nav--logo-switch">
+    <a href="index.html"></a>
+  </div>
+  <nav>
+    <ul class="nav--links">
+      <li id="link1"><a href="./cafe.html">das Café</a></li>
+      <li id="link2"><a href=" ./herkunft.html">Herkunft </a></li>
+      <li id="link3"><a href="#">Shop</a></li>
+      <li id="link4"><a href="./kontakt.html">Kontakt</a></li>
+    </ul>
+  </nav>
 </div>
