--- a/src/css/components/_nav.scss
+++ b/src/css/components/_nav.scss
@@ -1,79 +1,85 @@
 #nav-d {
-    padding: 1rem 10rem;
+  padding: 1rem 10rem;
 
-    @include mq(media-xxl) {
-        padding: $padding--nav_m-xxl;
-    }
-    @include mq(media-xl) {
-        padding: $padding--nav_m-xl;
-    }
-    @include mq(media-lg) {
-        padding: $padding--nav_m-lg;
-    }
-    
-    @include mq-rv(media-md) {
-        display: none; // switch mobile nav off
-    }
+  @include mq(media-xxl) {
+    padding: $padding--nav_m-xxl;
+  }
+  @include mq(media-xl) {
+    padding: $padding--nav_m-xl;
+  }
+  @include mq(media-lg) {
+    padding: $padding--nav_m-lg;
+  }
+
+  @include mq-rv(media-md) {
+    display: none; // switch mobile nav off
+  }
 }
 
 .navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 5.5rem;
+
+  ul {
+    list-style: none;
+  }
+
+  .nav--logo {
+    img {
+      height: 100%;
+    }
+  }
+
+
+  .nav--links {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 5.5rem;
+    flex-direction: row;
+    justify-content: flex-start;
+    height: 100%;
 
-    ul {
-        list-style: none;
-    }
+    li {
+      margin-top: 1rem;
 
-    .nav--logo {
-        img {
-            height: 100%;
+      &:not(:last-of-type) {
+        margin-right: 7rem;
+      }
+
+      a {
+        text-decoration: none;
+
+        &:after {
+          // animation for line under nav--links
+          background: none repeat scroll 0 0 transparent;
+          content: "";
+          display: block;
+          height: 0.1rem;
+          background: $color--white;
+          transition: width 0.3s ease 0s, left 0.3s ease 0s;
+          width: 0;
         }
-    }
 
-    .nav--links {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        height: 100%;
-
-        li {
-            margin-top: 1rem;
-
-            &:not(:last-of-type) {
-                margin-right: 7rem;
-            }
-
-            a {
-                text-decoration: none;
-
-                &:after {
-                    background: none repeat scroll 0 0 transparent;
-                    content: "";
-                    display: block;
-                    height: .1rem;
-                    background: $color--white;
-                    transition: width 0.3s ease 0s, left 0.3s ease 0s;
-                    width: 0;
-                }
-
-                &:hover:after {
-                    width: 100%;
-                    left: 0;
-                }
-            }
+        &:hover:after {
+          width: 100%;
+          left: 0;
         }
+      }
     }
+  }
 
-    div {
-        height: 100%;
-    }
+  div {
+    height: 100%;
+  }
 
-    @include mq(media-xxl) {
-        max-width: 220rem;
-    }
+  @include mq(media-xxl) {
+    max-width: 220rem;
+  }
+}
+
+.changeColor {
+  filter: invert(100%);
 }
